--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,7 @@ exclude = [
   "svc/controller-system",
   "svc/svc-example-temp",
   "svc/svc-example-sensor-set",
+  "tools/eva-svc-debug",
 ]
 
 [workspace.package]
