--- a/tools/eva-lsl/Cargo.toml
+++ b/tools/eva-lsl/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "eva-lsl"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 authors = ["Serhij S. <div@altertech.com>"]
 license = "Apache-2.0"
@@ -11,8 +11,12 @@ keywords = ["eva-ics", "iot", "industrial", "scada", "cloud"]
 
 [dependencies]
 clap = { version = "4.5.20", features = ["derive"] }
+colored = "2.1.0"
 eva-client = "0.4.0"
 eva-common = { version = "0.3.74", features = ["common-payloads", "payload", "services", "openssl-vendored"] }
 hostname = "0.4.0"
 serde = { version = "1.0.210", features = ["derive"] }
 tokio = { version = "1.40.0", features = ["full"] }
+
+[target.'cfg(windows)'.dependencies]
+ansi_term = "0.12.1"
