--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,7 +62,7 @@ repository = "https://github.com/eva-ics/eva4"
 openssl = "^0.10.63"
 once_cell = "^1.19.0"
 hyper = "^0.14.28"
-parking_lot = "^0.12.1"
+parking_lot = { package = "parking_lot_rt", version = "^0.12.1" }
 async-channel = "^1.7"
 async-recursion = "^1.0.5"
 serde_yaml = "^0.8"
