--- a/svc/controller-system/Cargo.toml
+++ b/svc/controller-system/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 publish = false
 
 [dependencies]
-busrt = { version = "0.4", features = ["rpc", "ipc"], optional = true }
+busrt = { version = "0.4.12", features = ["rpc", "ipc", "rt"], optional = true }
 eva-common = { version = "0.3.78", features = ["events", "console-logger"] }
 eva-sdk = { version = "0.3.58", features = ["controller"], optional = true }
 tokio = { version = "1.36.0", features = ["full"] }
@@ -15,7 +15,7 @@ log = "0.4.20"
 jemallocator = { version = "0.5.4", optional = true }
 once_cell = "1.19.0"
 sysinfo = "0.30.5"
-parking_lot = "0.12.1"
+parking_lot = { package = "parking_lot_rt", version = "^0.12.1" }
 http-body-util = { version = "0.1.0", optional = true }
 hyper = { version = "1.1.0", features = ["server", "http1"], optional = true }
 hyper-util = { version = "0.1.3", features = ["http1", "server", "tokio"], optional = true }
