--- a/svc/ffi/Cargo.toml
+++ b/svc/ffi/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 publish = false
 
 [dependencies]
-busrt = { version = "0.4", features = ["rpc", "ipc"] }
+busrt = { version = "0.4.12", features = ["rpc", "ipc", "rt"] }
 eva-common = { version = "0.3.78", features = ["events", "time"] }
 eva-sdk = { version = "0.3.58" }
 tokio = { version = "1.36.0", features = ["full"] }
