--- a/genpass-native/Cargo.toml
+++ b/genpass-native/Cargo.toml
@@ -4,6 +4,7 @@ version.workspace = true
 edition.workspace = true
 repository.workspace = true
 publish = false
+version = "0.1.1"
 
 [dependencies]
 openssl = { workspace = true }
