--- a/svc/controller-system/Cargo.toml
+++ b/svc/controller-system/Cargo.toml
@@ -26,13 +26,17 @@ is-terminal = { version = "0.4.11", optional = true }
 env_logger = { version = "0.11.1", optional = true }
 syslog = { version = "6.1.0", optional = true }
 bmart = "0.2.6"
-reqwest = { version = "0.11.24", optional = true, features = ["json"] }
+reqwest = { version = "0.12.9", optional = true, features = ["json"] }
 openssl = { version = "0.10.66", optional = true }
 clap = { version = "4.5.0", optional = true, features = ["derive"] }
 eventlog = { version = "0.2.2", optional = true }
 windows-service = { version = "0.6.0", optional = true }
 num_cpus = "1.16.0"
 procfs = { version = "0.16.0", optional = true }
+
+rustls = { version = "0.23", features = ["ring"], optional = true }
+rustls-cng = { version = "0.5", optional = true }
+rustls-native-certs = { version = "0.8", optional = true }
 
 [profile.release]
 strip = true
@@ -62,11 +66,12 @@ required-features = ["agent-windows"]
 std-alloc = []
 openssl-vendored = ["eva-common/openssl-vendored", "openssl/vendored"]
 openssl3 = ["eva-common/openssl3"]
+fips = ["rustls?/fips", "rustls-cng?/fips"]
 
 service = ["busrt", "async-trait", "http-body-util", "hyper", "hyper-util", "jemallocator", "procfs", "eva-sdk"]
 agent = ["serde_yaml", "env_logger", "reqwest", "clap"]
-agent-linux = ["agent", "syslog", "is-terminal", "openssl", "jemallocator", "eva-common/services", "procfs"]
-agent-windows = ["agent", "eventlog", "windows-service"]
+agent-linux = ["agent", "syslog", "is-terminal", "openssl", "jemallocator", "eva-common/services", "procfs", "reqwest/native-tls"]
+agent-windows = ["agent", "eventlog", "windows-service", "reqwest/rustls-tls", "rustls", "rustls-cng", "rustls-native-certs"]
 
 #default = ["service"]
 #default = ["agent-windows"]
