--- a/share/svc-tpl/svc-tpl-controller-system.yml
+++ b/share/svc-tpl/svc-tpl-controller-system.yml
@@ -15,7 +15,7 @@ config:
     # in case if set, a remote host can be verified by an external
     # authenticator (e.g. on a front-end server). if specified, the service
     # MUST be run under a trusted front-end and no direct requests should be
-    # allowed
+    # allowed. Also accepts host names as "CN = host" (RFC 2253)
     #trusted_system_header: X-Authenticated-System
     # host map (name/key)
     # note: the service has got an own key database
