--- a/cli-js/package.json
+++ b/cli-js/package.json
@@ -1,15 +1,18 @@
 {
   "name": "eva-ics-cli",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "bin": {
     "eva-ics-cli": "./index.js"
   },
-  "files": [ "index.js" ],
+  "files": [
+    "index.js"
+  ],
   "author": "Bohemia Automation",
   "license": "Apache-2.0",
   "dependencies": {
     "@eva-ics/webengine": "^0.9.10",
+    "console-log-colors": "^0.5.0",
     "minimist": "^1.2.8"
   }
 }
