--- a/svc/aaa-localauth/eapi.yml
+++ b/svc/aaa-localauth/eapi.yml
@@ -328,3 +328,19 @@ auth.user:
       des: "Extra options map (e.g. otp=code for two-factor auth)"
       req: false
   ret: The method returns errors if auth is not successful
+reset.user:
+  des: Resets user account (e.g. clears 2FA)
+  par:
+    - nam: login
+      typ: String
+      des: Account login
+      req: true
+    - nam: password
+      typ: String
+      des: Account password (plain text)
+      req: true
+    - nam: xopts
+      typ: map<String/Any>
+      des: "Extra options map (e.g. otp=code for two-factor auth)"
+      req: false
+  ret:
