--- a/svc/controller-sr/Cargo.toml
+++ b/svc/controller-sr/Cargo.toml
@@ -13,7 +13,7 @@ async-trait = { workspace = true }
 serde = { features = ["derive", "rc"] , workspace = true }
 log = { workspace = true }
 async-channel = { workspace = true }
-jemallocator = { workspace = true }
+mimalloc = { workspace = true }
 bmart = { workspace = true }
 once_cell = { workspace = true }
 shlex = "1.3.0"
