--- a/svc/controller-virtual/Cargo.toml
+++ b/svc/controller-virtual/Cargo.toml
@@ -14,7 +14,7 @@ serde = { features = ["derive", "rc"] , workspace = true }
 log = { workspace = true }
 async-channel = { workspace = true }
 uuid = { features = ["serde", "v4"] , workspace = true }
-jemallocator = { workspace = true }
+mimalloc = { workspace = true }
 bmart = { workspace = true }
 tagmap ="0.0.9"
 once_cell = { workspace = true }
