--- a/svc/controller-lm/Cargo.toml
+++ b/svc/controller-lm/Cargo.toml
@@ -15,7 +15,7 @@ serde = { features = ["derive", "rc"] , workspace = true }
 log = { workspace = true }
 lazy_static = { workspace = true }
 async-channel = { workspace = true }
-jemallocator = { workspace = true }
+mimalloc = { workspace = true }
 bmart = { workspace = true }
 once_cell = { workspace = true }
 chrono = "0.4.33"
