--- a/svc/db-influx/Cargo.toml
+++ b/svc/db-influx/Cargo.toml
@@ -23,7 +23,7 @@ serde_json = { workspace = true }
 urlencoding = "2.1.3"
 csv-async = "1.2.6"
 futures = "0.3.30"
-jemallocator = { workspace = true }
+mimalloc = { workspace = true }
 tokio-native-tls = "0.3.1"
 crypto-tools = { path = "../../crypto-tools" }
 
