--- a/svc/db-sql/Cargo.toml
+++ b/svc/db-sql/Cargo.toml
@@ -20,7 +20,7 @@ sqlx = { version = "0.6.3", features = [
 "runtime-tokio-native-tls", "any",
 "sqlite","mysql", "postgres" ] }
 futures = "0.3.30"
-jemallocator = { workspace = true }
+mimalloc = { workspace = true }
 
 [features]
 std-alloc = []
