--- a/svc/ffi/Cargo.toml
+++ b/svc/ffi/Cargo.toml
@@ -13,7 +13,7 @@ async-trait = { version = "0.1.77" }
 serde = { version = "1.0.196", features = ["derive", "rc"] }
 log = "0.4.20"
 async-channel = "1.9.0"
-jemallocator = { version = "0.5.4" }
+mimalloc = { version = "0.1.43" }
 libloading = "0.8.1"
 once_cell = "1.19.0"
 clap = { version = "3.2.25", features = ["derive"] }
