--- a/svc/mirror/Cargo.toml
+++ b/svc/mirror/Cargo.toml
@@ -14,7 +14,7 @@ serde = { features = ["derive", "rc"] , workspace = true }
 log = { workspace = true }
 lazy_static = { workspace = true }
 async-channel = { workspace = true }
-jemallocator = { workspace = true }
+mimalloc = { workspace = true }
 hyper = { features = ["server", "tcp", "http1", "http2"] , workspace = true }
 once_cell = { workspace = true }
 serde_yaml = { workspace = true }
