--- a/svc/svc-example-temp/Cargo.toml
+++ b/svc/svc-example-temp/Cargo.toml
@@ -11,7 +11,7 @@ tokio = { version = "1.36.0", features = ["full"] }
 async-trait = { version = "0.1.77" }
 serde = { version = "1.0.196", features = ["derive", "rc"] }
 log = "0.4.20"
-jemallocator = { version = "0.5.4" }
+mimalloc = { version = "0.1.43" }
 once_cell = "1.19.0"
 
 [features]
