--- a/svc/svc-expiration/Cargo.toml
+++ b/svc/svc-expiration/Cargo.toml
@@ -15,7 +15,7 @@ log = { workspace = true }
 lazy_static = { workspace = true }
 async-channel = { workspace = true }
 eva-sdk = { workspace = true }
-jemallocator = { workspace = true }
+mimalloc = { workspace = true }
 async-io = "2.3.1"
 
 [features]
