--- a/svc/svc-filewriter/Cargo.toml
+++ b/svc/svc-filewriter/Cargo.toml
@@ -17,7 +17,7 @@ async-channel = { workspace = true }
 serde_json = { workspace = true }
 chrono = { workspace = true }
 once_cell = { workspace = true }
-jemallocator = { workspace = true }
+mimalloc = { workspace = true }
 cron = "0.12.0"
 parking_lot = { workspace = true }
 openssl = { workspace = true }
