--- a/svc/svc-mailer/Cargo.toml
+++ b/svc/svc-mailer/Cargo.toml
@@ -13,7 +13,7 @@ async-trait = { workspace = true }
 serde = { features = ["derive", "rc"] , workspace = true }
 log = { workspace = true }
 lettre = { version = "0.11.4", features = ["tokio1-native-tls"] }
-jemallocator = { workspace = true }
+mimalloc = { workspace = true }
 once_cell = { workspace = true }
 ttl_cache = { version = "0.5" }
 parking_lot = { workspace = true }
