--- a/svc/svc-modbus-slave/Cargo.toml
+++ b/svc/svc-modbus-slave/Cargo.toml
@@ -14,7 +14,7 @@ serde = { features = ["derive", "rc"] , workspace = true }
 log = { workspace = true }
 lazy_static = { workspace = true }
 async-channel = { workspace = true }
-jemallocator = { workspace = true }
+mimalloc = { workspace = true }
 rmodbus = "0.6"
 tokio-serial = "5.4.4"
 once_cell = { workspace = true }
