--- a/share/svc-tpl/svc-tpl-replication.yml
+++ b/share/svc-tpl/svc-tpl-replication.yml
@@ -30,7 +30,7 @@ config:
   api_enabled: true
   # interval to submit all items. if api is enabled, the option is ignored as
   # reload process is handled by remotes.
-  interval: 30
+  #interval: 30
   # enable discovery of secondary nodes
   discovery_enabled: true
   # key (id) to use for auto-discovered nodes
