terminals in filemgr

--- a/share/svc-tpl/svc-tpl-filemgr.yml
+++ b/share/svc-tpl/svc-tpl-filemgr.yml
@@ -7,6 +7,6 @@ config:
     - registry
     - svc_data
   mime_types: share/mime.yml
-# the file manager service usually works under root, however may be restricted
-# for higher security
-user: eva
+  terminal: true
+# the file manager service works under root (or the core super user) only,
+# field "user" is ignored if set
