terminal session api

--- a/svc/filemgr/Cargo.toml
+++ b/svc/filemgr/Cargo.toml
@@ -12,10 +12,8 @@ tokio = { features = ["full"] , workspace = true }
 async-trait = { workspace = true }
 serde = { features = ["derive", "rc"] , workspace = true }
 log = { workspace = true }
-lazy_static = { workspace = true }
 once_cell = { workspace = true }
 async-channel = { workspace = true }
-parking_lot = { workspace = true }
 serde_yaml = { workspace = true }
 hex = { workspace = true }
 parse_int = "0.6.0"
@@ -25,6 +23,7 @@ bmart = { workspace = true }
 openssl = { workspace = true }
 glob-match = "0.2.1"
 async-recursion = { workspace = true }
+uuid = { workspace = true }
 termios = "0.3.3"
 libc = "0.2.169"
 
