user eva for filemgr

--- a/share/svc-tpl/svc-tpl-filemgr.yml
+++ b/share/svc-tpl/svc-tpl-filemgr.yml
@@ -10,4 +10,4 @@ config:
   terminal: true
 # the file manager service usually works under root, however may be restricted
 # for higher security
-#user: eva
+user: eva
