--- a/svc/filemgr/Cargo.toml
+++ b/svc/filemgr/Cargo.toml
@@ -24,9 +24,10 @@ openssl = { workspace = true }
 glob-match = "0.2.1"
 async-recursion = { workspace = true }
 uuid = { workspace = true }
-termios = "0.3.3"
 libc = "0.2.169"
 tracing = { version = "0.1.41", features = ["log"] }
+rustix-openpty = "0.1.1"
+rustix = "0.38.44"
 
 [features]
 std-alloc = []
