--- a/share/svc-tpl/svc-tpl-hmi.yml
+++ b/share/svc-tpl/svc-tpl-hmi.yml
@@ -22,7 +22,9 @@ config:
     prolong: true # prolong session on any activity
     stick_ip: true # stick session to IP
     allow_list_neighbors: false # allow list info for other logged in users
-    allow_concurrent: true # allow concurrent sessions (default: true)
+    # allow concurrent sessions (default: true). setting the parameter to false
+    # disables concurrent sessions for all users except administrators
+    allow_concurrent: true
   user_data:
     max_records: 100
     max_record_length: 16384
