--- a/svc/controller-enip/Cargo.toml
+++ b/svc/controller-enip/Cargo.toml
@@ -17,6 +17,7 @@ eva-sdk = { features = ["controller"] , workspace = true }
 eva-common = { features = ["events", "time", "common-payloads"] , workspace = true }
 once_cell = { workspace = true }
 mimalloc = { workspace = true }
+logreducer = { path = "../../logreducer" }
 plctag = { path = "./plctag" }
 bmart = { workspace = true }
 uuid = { features = ["v4"] , workspace = true }
