--- a/svc/svc-mailer/Cargo.toml
+++ b/svc/svc-mailer/Cargo.toml
@@ -15,7 +15,7 @@ log = { workspace = true }
 lettre = { version = "0.11.4", features = ["tokio1-native-tls"] }
 mimalloc = { workspace = true }
 once_cell = { workspace = true }
-ttl_cache = { version = "0.5" }
+ttl_cache = { workspace = true }
 parking_lot = { workspace = true }
 tokio-task-pool = "0.1.5"
 async-channel = { workspace = true }
