--- a/Cargo.toml
+++ b/Cargo.toml
@@ -83,7 +83,7 @@ colored = "^2.1.0"
 bmart = "^0.2.11"
 uuid = "^1.7.0"
 futures = "^0.3.30"
-serde = "=1.0.197"
+serde = "^1.0.197"
 ttl_cache = "0.5"
 base64 = "^0.13"
 lazy_static = "^1.4.0"
