--- a/svc/controller-system/Makefile
+++ b/svc/controller-system/Makefile
@@ -16,8 +16,8 @@ compile-musl-aarch64:
 compile-windows:
 	rm -rf _build/eva-cs-agent
 	mkdir -p ./_build/eva-cs-agent
-	ssh -t lab-w1 "cd /src/eva4/svc/controller-system && git checkout stable && git pull"
-	ssh -t lab-w1 "cmd /C c:/src/eva4/svc/controller-system/build-win.bat"
+	ssh -t lab-w1 "cd /src/eva4/svc/controller-system && & 'C:/Program Files/git/bin/git' checkout stable && & 'C:/Program Files/git/bin/git' pull"
+	ssh -t lab-w1 "c:/windows/system32/cmd /C c:/src/eva4/svc/controller-system/build-win.bat"
 	scp lab-w1:/src/eva4/svc/controller-system/target/release/eva-cs-agent-windows.exe ./_build/eva-cs-agent/eva-cs-agent.exe
 	cp agent-config-example.yml ./_build/eva-cs-agent/config.yml
 
