--- a/bindings/python/eva-ics-sdk/Makefile
+++ b/bindings/python/eva-ics-sdk/Makefile
@@ -1,10 +1,10 @@
-VERSION=0.2.33
+VERSION=0.2.34
 
 all:
 	@echo "what do you want to build today?"
 
 ver:
-	find . -type f -name "*.py" -exec sed -i "s/^__version__ = .*/__version__ = '${VERSION}'/g" {} \;
+	find . -type f -name "*.py" ! -name "__main__.py" -exec sed -i "s/^__version__ = .*/__version__ = '${VERSION}'/g" {} \;
 
 d: build
 
